3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for CVS:

More bugfixes:
server/player.c: Fix permadeath without resurrection - wasn't deleting
    player save files as it was supposed to.  If permadeath +
    resurrection was in use, I believe it all worked as expected.
include/shop.h: remove _SHOP_H after endif, causing compiler warnings.
include/skills.h: Add check to USING_SKILL to make sure chosen_skill
   is not null.
server/c_chat.c: Add some missing return values, resulting in compiler
   warnings.
server/skill_util.c: Remove unused variable.  compiler warnings again.
server/spell_effect.c: Change dimension door so that you can't go
   through spaces that block passsage and also block view (eg walls).
   This goes back to the more traditional behaviour.  Remove
   some unused variables.
server/spell_util.c: Add missing P_OUT_OF_MAP to move_missile, resulting
   in crashes.
server/time.c: if generator is not on a map, don't have it generates.
   Fixes crashes.
MSW 2003-02-02

New materialtype system for crossfire.  Based in concept on my original
design, but rewritten from scratch to make it easily extensible.

In a nutshell:

Each of the old materialtypes (metal, glass, stone, wood) are now a class
of materials.  When an item in the game is created, if it does not have a
specific materialname of it's own, a materialname is generated randomly
from the matching entries in the "lib/materials" file.  This file
contains all of the saving throws, and other material specific
modifications for each of the expanded materials.

Materials can be manually specified in the arch with the "materialname"
directive.  Such as the gold coins, which are specified to be made of,